--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@ body{
     display: flex;
     justify-content: center;
     color: hwb(204 78% 0%);
-    font-size: 30px;
+    /* font-size: 1vmax; */
+    font-size: 4.3vmin;
     font-family: 'Montserrat';
     font-weight: 675;
     transform: scaleY(1.1);
@@ -33,31 +34,31 @@ body{
     justify-content: space-between;
     align-items: center;
     width: auto;
-    height: 35px;
+    height: 3vmin;
     padding: 20px 50px;
     background-color: rgb(9, 3, 46);
     z-index: 2;
 }
 
-.boxshadow::after{
+/* .boxshadow::after{
     content: '';
     position: absolute;
     width: 100%;
     bottom: 1px;
     z-index: 1;
     box-shadow: -50px -830px 35px 2px blue;
-}
+} */
 
-ul{
+/* ul{
     display: flex;
     margin: 0;
     padding: 0;
     gap: 25px;
-}
+} */
 
 .pfp{
-    width: 50px;
-    height: 50px;
+    width: 5.5vmin;
+    height: 5.5vmin;
     border-radius: 50%;
 }
 
@@ -144,7 +145,7 @@ ul{
     flex-direction: row;
     flex-wrap: wrap;
     max-width: 800px;
-    gap: 130px;
+    gap: 6vw;
     justify-content: center;
 }
 
@@ -155,8 +156,9 @@ ul{
 p{
     max-width: 400px;
     color: rgba(255, 255, 255, 0.753);
-    line-height: 25px;
-    font-size: 100%;
+    line-height: 3.5vmin;
+    /* font-size: 0.5vmax; */
+    font-size: 1.9vmin;
     font-weight: 450;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -217,7 +219,7 @@ p{
     flex-direction: column;
     flex-wrap: wrap;
     max-width: 800px;
-    height: 1500px;
+    height: 1000px;
     gap: 10px;
 }
 
@@ -230,7 +232,7 @@ p{
 
 .exp_buttons{
     color: rgba(255, 255, 255, 0.966);
-    font-size: 15px;
+    font-size: 2vmin;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 600;
     background-color: rgb(0, 0, 97);
@@ -242,5 +244,50 @@ p{
 
 .exp_buttons:hover{
     cursor: pointer;
+}
+
+.tab_panel{
+    margin: 10px 0px;
+    height: 300px;
+    width: auto;
+    border-radius: 20px;
+    border: 1px solid rgba(193, 243, 252, 0.541);
+}
+
+.tab_info{
+    height: 70px;
+    position: relative;
+    padding: 10px;
+    color: white;
+}
+
+.logos{
+    height: 40px;
+    width: 40px;
+    border-radius: 100%;
+    border: 2px solid rgba(193, 243, 252, 0.541);
+}
+
+.position_logo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    position: absolute;
+    left: -3.9rem;
+    top: 1rem;
+}
+
+
+
+.projects{
+    margin: 0 auto;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    max-width: 800px;
+    height: 1000px;
+    gap: 10px;
 }
 
