--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@ body{
     display: flex;
     justify-content: center;
     color: hwb(204 78% 0%);
-    /* font-size: 1vmax; */
-    font-size: 6vmin;
+    font-size: 3.5vmax;
+    /* font-size: 5vmin; */
     font-family: 'Montserrat';
     font-weight: 675;
     transform: scaleY(1.1);
@@ -110,7 +110,6 @@ body{
 }
 
 
-
 @keyframes glowing{
     0% {background-position: 0 0;}
     50% {background-position: 400% 0;}
@@ -156,9 +155,8 @@ body{
 p{
     max-width: 400px;
     color: rgba(255, 255, 255, 0.753);
-    line-height: 3.5vmin;
-    /* font-size: 0.5vmax; */
-    font-size: 1.9vmin;
+    line-height: 25px;
+    font-size: 17px;
     font-weight: 450;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -219,7 +217,7 @@ p{
     flex-direction: column;
     flex-wrap: wrap;
     max-width: 800px;
-    height: 1000px;
+    height: fit-content;
     gap: 10px;
 }
 
@@ -232,7 +230,7 @@ p{
 
 .exp_buttons{
     color: rgba(255, 255, 255, 0.966);
-    font-size: 2vmin;
+    font-size: 15px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 600;
     background-color: rgb(0, 0, 97);
@@ -248,17 +246,39 @@ p{
 
 .tab_panel{
     margin: 10px 0px;
-    height: 300px;
+    height: fit-content;
     width: auto;
     border-radius: 20px;
     border: 1px solid rgba(193, 243, 252, 0.541);
 }
 
 .tab_info{
-    height: 70px;
+    height: fit-content;
     position: relative;
-    padding: 10px;
+    padding: 1rem 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.tab_title{
+    font-size: 15px;
+    font-weight: 600;
     color: white;
+}
+
+.tab_sub_title{
+    font-size: 12px;
+    color: rgba(255, 255, 255, 0.753);
+}
+
+.tab_desc{
+    font-size: 13px;
+    color: rgba(255, 255, 255, 0.904);
+    list-style-type: '- ';
+    line-height: 19px;
+    font-weight: 490;
 }
 
 .logos{
