--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ p{
 .tab_info{
     height: fit-content;
     position: relative;
-    padding: 1rem 0;
+    padding: 1rem 1rem 1rem 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     flex-direction: column;
