--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 
 /* @media only screen and (max-width: 500px) {
     .name_tag{
-        font-size: 30px;
+        font-size: 28px;
     }
  } */
 
@@ -28,7 +28,7 @@ body{
     display: flex;
     justify-content: center;
     color: hwb(204 78% 0%);
-    font-size: clamp(1.75rem, 1vw + 1.5rem, 2.813rem);
+    font-size: clamp(1.563rem, 1vw + 1.25rem, 2.813rem);
     font-family: 'Montserrat';
     font-weight: 675;
     transform: scaleY(1.1);
@@ -40,7 +40,7 @@ body{
     align-items: center;
     width: auto;
     height: 3vmin;
-    padding: 20px 50px;
+    padding: 20px clamp(1.25rem, 1vw + 1rem, 3.125rem);
     background-color: rgb(9, 3, 46);
     z-index: 2;
 }
@@ -171,7 +171,7 @@ p{
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
-    gap: 15px;
+    gap: 10px;
 }
 
 .card{
