--- a/style.css
+++ b/style.css
@@ -9,9 +9,16 @@ body{
     src: url(assets/Montserrat-VariableFont_wght.ttf);
 }
 
-/* @media only screen and (max-width: 500px) {
-    .name_tag{
-        font-size: 28px;
+/* @media only screen and (max-width: 560px) {
+
+    header ul{
+        position: fixed;
+        background-color: rgb(9, 3, 46);
+        top: 10px;
+        right: 0;
+        width: 60px;
+        flex-direction: column;
+        padding: 10rem;
     }
  } */
 
@@ -34,7 +41,7 @@ body{
     transform: scaleY(1.1);
 }
 
-#header{
+header{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -45,21 +52,12 @@ body{
     z-index: 2;
 }
 
-/* .boxshadow::after{
-    content: '';
-    position: absolute;
-    width: 100%;
-    bottom: 1px;
-    z-index: 1;
-    box-shadow: -50px -830px 35px 2px blue;
-} */
-
-/* ul{
-    display: flex;
-    margin: 0;
-    padding: 0;
-    gap: 25px;
-} */
+header ul{
+    display: flex; 
+    margin: 0; 
+    padding: 0; 
+    gap: 3vmin;
+}
 
 .pfp{
     width: clamp(1.875rem, 4vw + 0.25rem, 2.813rem);
@@ -238,7 +236,7 @@ p{
     font-size: clamp(0.75rem, 1vw + 0.20rem, 0.938rem);;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 600;
-    background-color: rgb(0, 0, 97);
+    background-color: rgb(15, 7, 68);
     border-color: transparent;
     width: 100%;
     height: 30px;
