--- a/style.css
+++ b/style.css
@@ -236,11 +236,15 @@ p{
     font-size: clamp(0.75rem, 1vw + 0.20rem, 0.938rem);;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 600;
-    background-color: rgb(15, 7, 68);
+    background-color: rgb(21, 10, 92);
     border-color: transparent;
     width: 100%;
     height: 30px;
     border-radius: 10px;
+}
+
+.exp_buttons[aria-selected="false"]{
+    background-color: rgba(15, 7, 68, 0.356);
 }
 
 .exp_buttons:hover{
