--- a/style.css
+++ b/style.css
@@ -306,8 +306,6 @@ p{
     top: 1rem;
 }
 
-
-
 .projects{
     margin: 0 auto;
     padding: 40px;
@@ -315,7 +313,24 @@ p{
     flex-direction: column;
     flex-wrap: wrap;
     max-width: 800px;
-    height: 1000px;
+    height: fit-content;
     gap: 10px;
 }
 
+.project_list{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.project_panel{
+    padding: 15px;
+    width: 355px;
+    height: 50px;
+    border: 1px solid white;
+    border-radius: 7px;
+}
