--- a/style.css
+++ b/style.css
@@ -105,6 +105,11 @@ header{
     z-index: 2;
 }
 
+button {
+    -webkit-tap-highlight-color: transparent;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
 /* header ul{
     display: flex;
     align-items: center;
