--- a/style.css
+++ b/style.css
@@ -1,15 +1,12 @@
-html { scroll-behavior: smooth; }
-
-body{
-    margin: 0;
-    background-color: rgb(4, 0, 19)
-}
+/* FONTS */
 
 @font-face {
     font-family: 'Montserrat';
     font-optical-sizing: auto;
     src: url(assets/Montserrat-VariableFont_wght.ttf);
 }
+
+/* MOBILE COMPATIBILITY */
 
 @media only screen and (max-width: 650px) {
 
@@ -55,45 +52,20 @@ body{
     }
 }
 
-#sidebar_active, #overlay{
-    display: none;
+html { scroll-behavior: smooth; }
+
+body{
+    margin: 0;
+    background-color: rgb(4, 0, 19)
 }
 
-/* #side_button{
-    color: white;
-    background-color: transparent;
-    border: none;
-}
-
-#side_button:hover{
-    cursor: pointer;
-} */
-
-.open-sidebar-button, .close-sidebar-button{
-    display: none;
-}
-
-.open-sidebar-button:hover, .close-sidebar-button:hover{
-    cursor: pointer;
-}
+/* HEADER */
 
 .container{
     width: auto;
     height: 2000px;
     box-sizing: border-box;
     background-color: rgb(4, 0, 19);
-}
-
-.name_tag{
-    width: 0 auto;
-    padding: 50px 0px 0px 0px;
-    display: flex;
-    justify-content: center;
-    color: hwb(204 78% 0%);
-    font-size: clamp(1.563rem, 1vw + 1.25rem, 2.813rem);
-    font-family: 'Montserrat';
-    font-weight: 675;
-    transform: scaleY(1.1);
 }
 
 header{
@@ -105,29 +77,6 @@ header{
     padding: 20px clamp(1.25rem, 1vw + 1rem, 3.125rem);
     background-color: rgb(9, 3, 46);
     z-index: 2;
-}
-
-button {
-    -webkit-tap-highlight-color: transparent;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
-/* header ul{
-    display: flex;
-    align-items: center;
-    padding: 0;
-    gap: 25px;
-    margin: 0; 
-    height: 70%;
-} */
-
-.links_container{
-    display: flex;
-    align-items: center;
-    padding: 0;
-    gap: 25px;
-    margin: 0; 
-    height: 70%;
 }
 
 header ul a{
@@ -147,7 +96,14 @@ header ul a:hover{
     border-radius: 50%;
 }
 
-/* links information */
+.links_container{
+    display: flex;
+    align-items: center;
+    padding: 0;
+    gap: 25px;
+    margin: 0; 
+    height: 70%;
+}
 
 .links{
     color: white;
@@ -159,6 +115,35 @@ header ul a:hover{
 .links:hover{
     text-decoration: underline;
 }
+
+/* SIDEBAR */
+
+#sidebar_active, #overlay{
+    display: none;
+}
+
+.open-sidebar-button, .close-sidebar-button{
+    display: none;
+}
+
+.open-sidebar-button:hover, .close-sidebar-button:hover{
+    cursor: pointer;
+}
+
+/* NAME TAG */
+
+.name_tag{
+    padding: 50px 0px 0px 0px;
+    display: flex;
+    justify-content: center;
+    color: hwb(204 78% 0%);
+    font-size: clamp(1.563rem, 1vw + 1.25rem, 2.813rem);
+    font-family: 'Montserrat';
+    font-weight: 675;
+    transform: scaleY(1.1);
+}
+
+/* BUTTON GLOWING ANIMATION */
 
 #button{
     background-color: transparent;
@@ -193,12 +178,13 @@ header ul a:hover{
     opacity: 1;
 }
 
-
 @keyframes glowing{
     0% {background-position: 0 0;}
     50% {background-position: 400% 0;}
     100% {background-position: 0 0;}
 }
+
+/* RESUME BUTTON */
 
 .btn{
     background-color: rgb(4, 0, 19);
@@ -217,9 +203,7 @@ header ul a:hover{
     border-width: 4px;
 }
 
-/* button:hover{
-    
-} */
+/* ABOUT SECTION */
 
 .about{
     margin: 0 auto;
@@ -230,10 +214,6 @@ header ul a:hover{
     max-width: 800px;
     gap: 6vw;
     justify-content: center;
-}
-
-.home{
-    border-bottom: 1px solid rgba(255, 255, 255, 0.185);
 }
 
 p{
@@ -252,6 +232,8 @@ p{
     align-items: center;
     gap: 10px;
 }
+
+/* PROFILE PIC INFO */
 
 .card{
     position: relative;
@@ -294,7 +276,9 @@ p{
     to{--angle: 360deg}
 }
 
-.experience{
+/* EXPERIENCE SECTION */
+
+.section_container{
     margin: 0 auto;
     padding: 40px;
     display: flex;
@@ -387,31 +371,54 @@ p{
     top: 1rem;
 }
 
-.projects{
-    margin: 0 auto;
-    padding: 40px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    max-width: 800px;
-    height: fit-content;
-    gap: 10px;
-}
+/* PROJECTS SECTION */
 
 .project_list{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
     gap: 20px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .project_panel{
+    display: flex;
+    flex: 1 1 0;
+    flex-direction: column;
     padding: 15px;
-    width: 355px;
-    height: 50px;
-    border: 1px solid white;
+    min-width: 230px;
+    gap: clamp(0.563rem, 1vw + 0.25rem, 1.2rem);
+    justify-content: space-between;
+    border: 1px solid rgba(193, 243, 252, 0.541);
     border-radius: 7px;
+}
+
+/* CONTACT SECTION */
+
+.contact_border{
+    border-bottom: 1px solid rgba(193, 243, 252, 0.541);
+}
+
+.form_box{
+    background-color: rgba(28, 39, 104, 0.541);
+    border: none;
+    color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 5px;
+    letter-spacing: .5px;
+}
+
+input::placeholder{
+    color: rgba(255, 255, 255, 0.738);
+}
+
+textarea {
+  resize: none;
+}
+
+textarea::placeholder{
+    color: rgba(255, 255, 255, 0.738);
 }
