--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ html { scroll-behavior: smooth; }
 
 body{
     margin: 0;
-    background-color: rgb(4, 0, 19)
+    background-color: rgb(4, 0, 19);
 }
 
 button{
