--- a/style.css
+++ b/style.css
@@ -145,9 +145,9 @@ header ul a:hover{
     padding: 2px;
     height: clamp(32px, 3vw, 70px);
     width: clamp(32px, 3vw, 70px);
-    top: 75%;
+    top: 85%;
     right: 0;
-    z-index: 10px;
+    z-index: 50;
     background-color: rgb(9, 3, 46);
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
@@ -170,7 +170,7 @@ header ul a:hover{
 /* NAME TAG */
 
 .name_tag{
-    padding: 50px 0px 0px 0px;
+    padding: 65px 0px 0px 0px;
     display: flex;
     justify-content: center;
     color: hwb(204 78% 0%);
@@ -471,4 +471,15 @@ textarea {
 
 textarea::placeholder{
     color: rgba(255, 255, 255, 0.738);
+}
+
+.form_message{
+    display: none;
+    justify-content: center;
+    align-items: center;
+    gap: 7px;
+    color: hwb(214 53% 2%);
+    font-size: clamp(0.60rem, 1vw + 0.4rem, 1.25rem);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: 35px;
 }
