--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ header ul a:hover{
 /* NAME TAG */
 
 .name_tag{
-    padding: clamp(2.5rem, 2vw + 2rem, 4rem) 0px 0px 0px;
+    padding: clamp(2.5rem, 2vw + 2.5rem, 6rem) 0px 0px 0px;
     display: flex;
     justify-content: center;
     color: hwb(204 78% 0%);
@@ -360,6 +360,7 @@ p{
     width: 100%;
     height: 30px;
     border-radius: 10px;
+    animation: fade_in .7s ease-in;
 }
 
 .exp_buttons[aria-selected="false"]{
@@ -376,6 +377,7 @@ p{
     width: auto;
     border-radius: 20px;
     border: 1px solid rgba(193, 243, 252, 0.541);
+    animation: fade_in .7s ease-in;
 }
 
 .tab_info{
@@ -409,8 +411,8 @@ p{
 }
 
 .logos{
-    height: 40px;
-    width: 40px;
+    height: 57px;
+    width: 57px;
     border-radius: 100%;
     border: 2px solid rgba(193, 243, 252, 0.541);
 }
@@ -421,7 +423,7 @@ p{
     align-items: center;
     box-sizing: border-box;
     position: absolute;
-    left: -3.9rem;
+    left: -4.4rem;
     top: 1rem;
 }
 
