--- a/style.css
+++ b/style.css
@@ -86,6 +86,15 @@ label{
     background-color: rgb(4, 0, 19);
 }
 
+li {
+    list-style:disc;
+    margin-bottom: 5px; 
+}
+
+li:last-child {
+    margin-bottom: 0;
+}
+
 @keyframes fade_in{
     0% {opacity: 0;}
     50% {opacity: 0.4;}
@@ -399,15 +408,15 @@ p{
 .tab_sub_title{
     font-size: clamp(0.625rem, 1vw + 0.25rem, 0.875rem);
     color: rgba(255, 255, 255, 0.753);
+    margin-bottom: 5px;
 }
 
 .tab_desc{
     font-size: clamp(0.625rem, 1vw + 0.25rem, 0.844rem);
     color: rgba(255, 255, 255, 0.904);
-    list-style-type: '- ';
     line-height: clamp(0.906rem, 1vw + 0.55rem, 1.219rem);
     font-weight: 490;
-    padding-inline-start: 20px;
+    padding-inline-start: 30px;    
 }
 
 .logos{
@@ -431,25 +440,53 @@ p{
 
 .project_list{
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: wrap-reverse;
     flex-direction: row;
     justify-content: center;
     gap: 20px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+/* .project_panel_main{
+    display: flex;
+    flex: 1 0 0;
+    flex-direction: column;
+    padding: 15px;
+    min-width: 300px;
+    gap: clamp(0.5rem, 1vw + 0.25rem, 1.2rem);
+    justify-content: space-between;
+    background-color: rgba(15, 7, 68, 0.303);
+    border: 1px solid rgba(193, 243, 252, 0.541);
+    border-radius: 7px;
+} */
+
 .project_panel{
     display: flex;
     flex: 1 1 0;
     flex-direction: column;
-    padding: 15px;
-    min-width: 230px;
+    padding: 20px;
+    min-width: 245px;
+    height: auto;
     gap: clamp(0.5rem, 1vw + 0.25rem, 1.2rem);
     justify-content: space-between;
     background-color: rgba(15, 7, 68, 0.303);
     border: 1px solid rgba(193, 243, 252, 0.541);
     border-radius: 7px;
 }
+
+.image_panel{
+    width: 100%; 
+    height: 100%;
+    display: flex;
+    flex: 1 1 0;
+    flex-direction: row;
+    min-width: 250px;
+    max-height: fit-content;
+    gap: clamp(0.5rem, 1vw + 0.25rem, 1.2rem);
+    justify-content: space-between;
+    border-radius: 7px;
+}
+
 
 .tech_stack{
     display: flex;
